# Search-Query-Agent

./: .env.example  README.md  main.py  make.py  pyproject.toml  requirements-macos.txt  requirements.txt
app/: extractor.py  gemini.py  init_gemini.py  main.py  scrapper.py
extractor/: extract_answer.py
formatter/: format_with_model.py
results/: scraped_results.json  snippets_results.json
scraper/: playwright_scraper.py
scripts/: prepare_dataset.py  preview_history.py
server/: ollama_adapter.py
tests/: test_dataset.py  test_integration.py  test_scraper.py  test_training.py
training/: convert_to_ollama.py  train_qlora.py
