[project]
name = "sqa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "anyio>=4.11.0",
    "beautifulsoup4>=4.14.2",
    "fastapi>=0.118.0",
    "google-genai>=1.41.0",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "nest-asyncio>=1.6.0",
    "ollama>=0.6.0",
    "playwright>=1.55.0",
    "python-dotenv>=1.1.1",
    "uvicorn[standard]>=0.37.0",
]
